Revert "SVY-9787 Setting numeric value list items dynamically is causing problems"
This reverts commit 6604a4f781192893d56f2b72f21db49cd44b5787.